Added login page backdrop and body color

--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -1,10 +1,13 @@
 <app-header></app-header>
 <div class="container">
+
+  <div class="backdrop">
   <div class="background">
     <img
       src="../../../assets/login-background-large.jpg"
       class="container__background-image"
     />
+  </div>
   </div>
   <div class="form-container">
     <div class="login-form">
