--- a/src/app/pages/login-page/login-page.component.scss
+++ b/src/app/pages/login-page/login-page.component.scss
@@ -1,6 +1,13 @@
-@import '../../../assets/scss/variables';
+@import '../../../assets/scss/variables.scss';
 
 .container {
+  height: 100%;
+}
+
+.backdrop {
+  background: rgba(0,0,0,0.4);
+  position: absolute;
+  width: 100%;
   height: 100%;
 }
 
@@ -30,6 +37,8 @@
   width: 100%;
   max-width: 450px;
   background-color: rgba(0, 0, 0, 0.8);
+  z-index: 1;
+
 
   &__container {
     display: flex;
