--- a/src/app/pages/login-page/login-page.component.scss
+++ b/src/app/pages/login-page/login-page.component.scss
@@ -5,7 +5,7 @@
 }
 
 .backdrop {
-  background: rgba(0,0,0,0.4);
+  background: rgba(0, 0, 0, 0.4);
   position: absolute;
   width: 100%;
   height: 100%;
@@ -39,7 +39,6 @@
   background-color: rgba(0, 0, 0, 0.8);
   z-index: 1;
 
-
   &__container {
     display: flex;
     flex-direction: column;
@@ -71,6 +70,7 @@
     border-radius: 4px;
     background-color: $color-gray4;
     color: $color-gray2;
+    font-weight: 300;
   }
 
   &__check {
@@ -92,5 +92,9 @@
     padding: 16px;
     background: $color-red;
     cursor: pointer;
+  }
+
+  &__help:hover {
+    text-decoration: underline;
   }
 }
