--- a/src/app/components/media-slider/media-slider.component.html
+++ b/src/app/components/media-slider/media-slider.component.html
@@ -3,16 +3,26 @@
   <h1 class="pageHead">{{ mediaGroup.name }}</h1>
   <div class="slider">
     <div class="sliderMask" #slider>
-      <div class="sliderItem" *ngFor="let media of mediaGroup.medias">
+      <div class="sliderItem" #sliderItem *ngFor="let media of sliderItems">
         <div class="sliderItemInner">
           <img class="cover" [src]="media.thumbnail" />
         </div>
       </div>
     </div>
-    <div class="leftArrow" ref="leftArrow" (click)="handlePrevious()">
+    <div
+      *ngIf="showPrev"
+      class="leftArrow"
+      ref="leftArrow"
+      (click)="handlePrevious()"
+    >
       <i class="fas fa-chevron-left"></i>
     </div>
-    <div class="rightArrow" ref="rightArrow" (click)="handleNext()">
+    <div
+      *ngIf="showNext"
+      class="rightArrow"
+      ref="rightArrow"
+      (click)="handleNext()"
+    >
       <i class="fas fa-chevron-right"></i>
     </div>
   </div>
