Adjusted slider resize and slider title padding

--- a/src/app/components/media-slider/media-slider.component.html
+++ b/src/app/components/media-slider/media-slider.component.html
@@ -1,5 +1,5 @@
 <app-media></app-media>
-<div class="wrapper" (window:resize)="onResize()">
+<div class="wrapper">
   <h1 class="pageHead">{{ mediaGroup.name }}</h1>
   <div class="slider">
     <div class="sliderMask" #slider>
