--- a/src/app/components/media-slider/media-slider.component.scss
+++ b/src/app/components/media-slider/media-slider.component.scss
@@ -1,11 +1,39 @@
-.pageHead {
-  padding: 15px 0;
-  min-height: 44px;
-  display: inline-block;
-  font-size: 26px;
-  font-weight: bold;
-  color: #999;
-  margin: 0 60px;
+.media-slider {
+  &__header {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__title {
+    padding-top: 15px;
+    display: inline-block;
+    font-size: 22px;
+    font-weight: bold;
+    color: #999;
+    margin: 0 4%;
+  }
+
+  &__pages-count {
+    display: flex;
+    align-items: flex-end;
+    margin-right: 4%;
+  }
+}
+
+.pages-count {
+  list-style-type: none;
+
+  &__item {
+    display: inline-block;
+    width: 12px;
+    height: 2px;
+    background-color: #4d4d4d;
+    margin-left: 1px;
+
+    &--active {
+      background-color: #aaa;
+    }
+  }
 }
 
 .slider {
@@ -13,49 +41,50 @@
   padding: 10px 0;
   z-index: 1;
   position: relative;
-}
 
-.sliderMask {
-  white-space: nowrap;
-  padding: 0 60px;
-  transition: all 300ms ease;
-}
+  &__container {
+    white-space: nowrap;
+    padding: 0 4%;
+    transition: all 300ms ease;
+  }
 
-.sliderItem {
-  display: inline-block;
-  width: 100%;
-  position: relative;
-  z-index: 1;
+  &__item {
+    display: inline-block;
+    width: 100%;
+    position: relative;
+    z-index: 1;
+    cursor: pointer;
 
-  @media all and (min-width: 600px) {
-    width: calc(100% / 2);
+    @media all and (min-width: 600px) {
+      width: calc(100% / 2);
+    }
+    @media all and (min-width: 768px) {
+      width: calc(100% / 3);
+    }
+    @media all and (min-width: 980px) {
+      width: calc(100% / 4);
+    }
+    @media all and (min-width: 1260px) {
+      width: calc(100% / 5);
+    }
+    @media all and (min-width: 1800px) {
+      width: calc(100% / 6);
+    }
+    @media all and (min-width: 2200px) {
+      width: calc(100% / 7);
+    }
   }
-  @media all and (min-width: 768px) {
-    width: calc(100% / 3);
-  }
-  @media all and (min-width: 980px) {
-    width: calc(100% / 4);
-  }
-  @media all and (min-width: 1260px) {
-    width: calc(100% / 5);
-  }
-  @media all and (min-width: 1800px) {
-    width: calc(100% / 6);
-  }
-  @media all and (min-width: 2200px) {
-    width: calc(100% / 7);
-  }
-}
 
-.sliderItemInner {
-  margin: 0 2px;
-  border-radius: 2px;
-  position: relative;
-}
+  &__item-inner {
+    margin: 0 2px;
+    border-radius: 2px;
+    position: relative;
+  }
 
-.cover {
-  max-width: 100%;
-  height: auto;
+  &__item-image {
+    max-width: 100%;
+    height: auto;
+  }
 }
 
 .leftArrow {
@@ -64,18 +93,18 @@
   justify-content: center;
   position: absolute;
   top: 10px;
-  background: linear-gradient(
-    to left,
-    rgba(35, 35, 35, 0.5),
-    rgba(35, 35, 35, 1)
-  );
-  color: #fff;
+  background: rgba(35, 35, 35, 0.3);
+  color: white;
   font-size: 30px;
-  width: 60px;
+  width: 4%;
   height: calc(99% - 20px);
-  // left: -10px;
+  left: 0px;
   z-index: 10;
   cursor: pointer;
+
+  &:hover {
+    background: rgba(35, 35, 35, 0.6);
+  }
 }
 
 .rightArrow {
@@ -84,17 +113,21 @@
   justify-content: center;
   position: absolute;
   top: 10px;
-  background: linear-gradient(
-    to right,
-    rgba(35, 35, 35, 0.5),
-    rgba(35, 35, 35, 1)
-  );
-  color: #fff;
+  background: rgba(35, 35, 35, 0.3);
+  color: white;
   font-size: 30px;
-  width: 60px;
+  width: 4%;
   height: calc(99% - 20px);
   right: 0;
   z-index: 10;
-
   cursor: pointer;
+
+  &:hover {
+    background: rgba(35, 35, 35, 0.6);
+  }
+}
+
+.hide {
+  display: none;
+  color: transparent;
 }
