--- a/src/app/pages/media-browser-page/media-browser-page.component.scss
+++ b/src/app/pages/media-browser-page/media-browser-page.component.scss
@@ -1,7 +1,7 @@
 .media-browser {
   height: 100%;
   width: 100%;
-  background-color: rgba(255, 0, 0, 0.1);
+  // background-color: rgba(255, 0, 0, 0.1);
 
   &__container {
     display: flex;
@@ -16,6 +16,6 @@
 
   &__lists {
     height: 100%;
-    background: rgba(0, 255, 0, 0.1);
+    // background: rgba(0, 255, 0, 0.1);
   }
 }
