--- a/src/app/components/media-slider/media-slider.component.html
+++ b/src/app/components/media-slider/media-slider.component.html
@@ -36,23 +36,45 @@
         <div class="slider__item-content">
           <div class="media-content">
             <div class="media-content__container">
-              <div class="media-content__infos">
-                <div class="media-content__play">
-                  <i class="fas fa-play"></i>
+              <div class="media-content__wrapper">
+                <div class="media-content__infos">
+                  <div class="media-content__button media-content__button--big">
+                    <i class="fas fa-play"></i>
+                  </div>
+                  <span class="media-content__title">{{ media.title }}</span>
+                  <div class="media-content__meta">
+                    <div appMaturityStyle class="media-content__maturity">
+                      {{ media.maturity }}
+                    </div>
+                    <div class="media-content__duration">
+                      {{ media.duration }}
+                    </div>
+                  </div>
+                  <div class="media-content__tags">
+                    <span
+                      class="media-content__tag"
+                      *ngFor="let tag of media.tags"
+                      >{{ tag }}
+                    </span>
+                  </div>
                 </div>
-                <span class="media-content__title">{{ media.title }}</span>
-                <div class="mediacontent__maturity">
-                  {{ media.maturity }} {{ media.duration }}
-                </div>
-                <div class="media-content__tags">
-                  <span *ngFor="let tag of media.tags">{{ tag }}</span>
+                <div class="media-content__buttons">
+                  <div class="media-content__button">
+                    <i class="far fa-thumbs-up"></i>
+                  </div>
+                  <div class="media-content__button">
+                    <i class="far fa-thumbs-down"></i>
+                  </div>
+                  <div class="media-content__button">
+                    <i class="fas fa-check"></i>
+                  </div>
+                  <div class="media-content__button">
+                    <i class="fas fa-plus"></i>
+                  </div>
                 </div>
               </div>
-              <div class="media-content__buttons">
-                <i class="far fa-thumbs-up"></i>
-                <i class="far fa-thumbs-down"></i>
-                <i class="fas fa-check"></i>
-                <i class="fas fa-plus"></i>
+              <div class="media-content__details">
+                <i class="fas fa-chevron-down"></i>
               </div>
             </div>
           </div>
