--- a/src/app/components/media-slider/media-slider.component.scss
+++ b/src/app/components/media-slider/media-slider.component.scss
@@ -51,12 +51,12 @@
 
   &__item {
     display: inline-block;
-    width: 100%;
     position: relative;
+    width: calc(100% / 3);
+    margin: 0 2px;
+    transition: all 500ms ease;
     z-index: 1;
     cursor: pointer;
-    transition: all 500ms ease;
-    width: calc(100% / 3);
 
     @media all and (min-width: 800px) {
       width: calc(100% / 4);
@@ -70,31 +70,28 @@
   }
 
   &__item-inner {
-    margin: 0 2px;
-    position: relative;
+    &:hover {
+      z-index: -1;
+    }
   }
 
   &__item-image {
     max-width: 100%;
     height: auto;
-    transition: opacity 500ms ease;
-    opacity: 1;
-
-    &:hover {
-      opacity: 0;
-    }
   }
 
   &__item-content {
     position: absolute;
     height: 100%;
     width: 100%;
-    opacity: 1;
-    transition: opacity 500ms ease;
-    background: red;
+    opacity: 0;
+    transition: all 1000ms ease;
+    // background: red;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 5));
 
     &:hover {
       opacity: 1;
+      z-index: 1;
     }
   }
 }
@@ -145,29 +142,113 @@
 }
 
 .media-content {
+  height: 100%;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.5));
+
+  &:hover {
+    background: linear-gradient(
+      to right,
+      rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.5)
+    );
+  }
+
   &__container {
+    height: 100%;
     display: flex;
-    margin: 20px 10px;
+    flex-direction: column;
+  }
+
+  &__wrapper {
+    height: 100%;
+    display: flex;
+    align-items: flex-end;
+    margin: 0px 10px;
   }
 
   &__infos {
     flex: 1;
+    font-size: 8px;
+    margin-bottom: 5px;
+
+    &:hover {
+      color: red;
+    }
   }
 
-  &__play {
+  &__title {
+    font-size: 12px;
+    font-weight: 500;
+    color: white;
+  }
+
+  &__meta {
+    display: flex;
+    align-items: center;
+    margin: 2px 0;
+    color: white;
+  }
+
+  &__maturity {
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid white;
-    border-radius: 50%;
-    width: 24px;
-    height: 24px;
+    width: 14px;
+    height: 14px;
+    border-radius: 1px;
+    margin: 0 5px;
+  }
+
+  &__duration {
     font-size: 10px;
-    background: rgba(0, 0, 0, 0.5);
+    font-weight: 400;
   }
 
   &__buttons {
     display: flex;
     flex-direction: column;
+    margin-bottom: 5px;
+  }
+
+  &__button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #999;
+    border-radius: 50%;
+    width: 14px;
+    height: 14px;
+    font-size: 6px;
+    background: rgba(0, 0, 0, 0.5);
+    margin: 2px 0;
+
+    &:hover {
+      border: 1px solid #fff;
+      transform: scale(1.1);
+    }
+
+    &--big {
+      width: 24px;
+      height: 24px;
+      font-size: 10px;
+      margin: 2px 0;
+    }
+  }
+
+  &__tags {
+    color: white;
+  }
+
+  &__tag {
+    margin-right: 10px;
+  }
+
+  &__details {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 5px;
+
+    &:hover {
+      color: red;
+    }
   }
 }
