Implemented billboard and changes some slider styles

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="header">
+<div class="header" #header>
   <a href="/" class="header__logo-wrapper">
     <img src="../../../assets/logo.svg" class="header__logo" />
   </a>
