--- a/src/app/pages/media-browser-page/media-browser-page.component.html
+++ b/src/app/pages/media-browser-page/media-browser-page.component.html
@@ -1,13 +1,14 @@
 <app-header></app-header>
 <div class="media-browser">
   <div class="media-browser__container">
-    <div class="media-browser__outdoor"></div>
+    <div class="media-browser__billboard">
+      <app-billboard [media]="billboardMedia"></app-billboard>
+    </div>
     <div class="media-browser__lists">
       <app-media-slider
         *ngFor="let mediaGroup of medias | async"
         [mediaGroup]="mediaGroup"
       ></app-media-slider>
-      <!-- <app-media-slider></app-media-slider> -->
     </div>
   </div>
 </div>
