--- a/src/app/components/media-slider/media-slider.component.scss
+++ b/src/app/components/media-slider/media-slider.component.scss
@@ -86,7 +86,6 @@
     width: 100%;
     opacity: 0;
     transition: all 1000ms ease;
-    // background: red;
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 5));
 
     &:hover {
@@ -143,14 +142,6 @@
 
 .media-content {
   height: 100%;
-  background: linear-gradient(to right, rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.5));
-
-  &:hover {
-    background: linear-gradient(
-      to right,
-      rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.5)
-    );
-  }
 
   &__container {
     height: 100%;
@@ -219,7 +210,7 @@
     height: 14px;
     font-size: 6px;
     background: rgba(0, 0, 0, 0.5);
-    margin: 2px 0;
+    margin-top: 2px;
 
     &:hover {
       border: 1px solid #fff;
