Adjusted slider translates and ajusted billboard styles

--- a/src/app/components/media-slider/media-slider.component.html
+++ b/src/app/components/media-slider/media-slider.component.html
@@ -79,8 +79,8 @@
             </div>
           </div>
         </div>
-        <div class="slider__item-inner">
-          <img class="slider__item-image" [src]="media.thumbnail" />
+        <div class="slider__item-background">
+          <img class="slider__item-background-image" [src]="media.thumbnail" />
         </div>
       </div>
     </div>
