--- a/src/app/components/billboard/billboard.component.scss
+++ b/src/app/components/billboard/billboard.component.scss
@@ -80,7 +80,7 @@
     bottom: 25%;
     right: 0;
     background: rgba(51, 51, 51, 0.6);
-    border-left: 2px solid white;
+    border-left: 3px solid white;
     display: flex;
     align-items: center;
     z-index: 1;
@@ -90,7 +90,8 @@
     }
 
     &-rating {
-      font-size: 1.5vw;
+      padding: 0.2vw;
+      font-size: 1.2vw;
       border-radius: 2px;
       display: flex;
       justify-content: center;
