--- a/src/app/components/media-slider/media-slider.component.scss
+++ b/src/app/components/media-slider/media-slider.component.scss
@@ -53,7 +53,6 @@
     display: inline-block;
     position: relative;
     width: calc(100% / 3);
-    margin: 0 2px;
     transition: all 500ms ease;
     z-index: 1;
     cursor: pointer;
@@ -69,13 +68,15 @@
     }
   }
 
-  &__item-inner {
+  &__item-background {
+    width: 100%;
+
     &:hover {
       z-index: -1;
     }
   }
 
-  &__item-image {
+  &__item-background-image {
     max-width: 100%;
     height: auto;
   }
