--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -8,10 +8,13 @@
       />
     </div>
   </div>
-  <div class="teste" fxFill fxFlex fxLayoutAlign="center center">
+  <div class="form-container">
     <div class="login-form">
       <div class="login-form__container">
         <h1 class="login-form__title">Sign In</h1>
+        <div class="error-box" *ngIf="errorMessage">
+          {{ errorMessage }}
+        </div>
         <form
           (ngSubmit)="onSubmit()"
           [formGroup]="form"
@@ -26,6 +29,9 @@
             autocomplete="off"
             autofocus
           />
+          <span class="login-form__error" *ngIf="email.invalid && email.dirty">
+            Please enter a valid email</span
+          >
           <input
             class="login-form__input"
             id="password"
@@ -33,7 +39,11 @@
             type="password"
             placeholder="Password"
           />
-          <span *ngIf="!email.valid && email.dirty"></span>
+          <span
+            class="login-form__error"
+            *ngIf="password.invalid && password.dirty"
+            >Your password must contain between 6 and 60 characters.</span
+          >
           <button class="login-form__button" type="submit">Sign In</button>
           <div class="login-form__container-footer">
             <input
