--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -4,7 +4,7 @@
   width: 100%;
   background: linear-gradient(
     to bottom,
-    rgba(0, 0, 0, 0.5) 0%,
+    rgba(0, 0, 0, 0.7) 10%,
     rgba(0, 0, 0, 0) 100%
   );
   z-index: 100;
@@ -14,14 +14,71 @@
     background: #141414;
   }
 
+  &__container {
+    margin: 0 4%;
+    display: flex;
+  }
+
   &__logo-wrapper {
     display: inline-block;
     line-height: 65px;
-    margin-left: 4%;
   }
 
   &__logo {
     width: 92px;
     vertical-align: middle;
+    margin-right: 25px;
   }
+
+  &__navigation {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    list-style-type: none;
+
+    &-items {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      list-style-type: none;
+    }
+
+    &-item {
+      margin-left: 15px;
+      color: #e5e5e5;
+      font-size: 14px;
+      font-weight: 300;
+      transition: color 400ms ease;
+
+      cursor: pointer;
+
+      &:not(&--active):hover {
+        color: #c5c5c5;
+      }
+
+      &--active {
+        color: white;
+        font-weight: bold;
+        cursor: default;
+      }
+    }
+  }
+
+  &__actions {
+    display: flex;
+    align-items: center;
+  }
+
+  &__action-button {
+    font-size: 20px;
+    background: transparent;
+    margin-left: 20px;
+    cursor: pointer;
+  }
+}
+
+.dropdown {
+  font-size: 16px;
+  margin-left: 10px;
 }
