--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,7 +3,10 @@
     <a href="/" class="header__logo-wrapper">
       <img src="../../../assets/logo.svg" class="header__logo" />
     </a>
-    <div class="header__navigation">
+    <div
+      class="header__navigation"
+      *ngIf="authService.isAuthenticated$ | async as user"
+    >
       <ul class="header__navigation-items">
         <li class="header__navigation-item header__navigation-item--active">
           Home
@@ -30,9 +33,28 @@
           </button>
         </div>
         <div class="header__action">
-          <button class="header__action-button">
-            <i class="fas fa-user"></i
-            ><i class="fas fa-caret-down dropdown"></i>
+          <button
+            class="header__action-button"
+            (mouseenter)="onShowDropdown()"
+            (mouseleave)="onHideDropdown()"
+          >
+            <img [src]="user.avatar" class="header__action-avatar" />
+            <i class="fas fa-caret-down header__action-dropdown"></i>
+            <div class="dropdown" #dropdown (mouseleave)="onHideDropdown()">
+              <div class="dropdown__arrow"></div>
+              <ul class="dropdown__items">
+                <li class="dropdown__item">
+                  <a class="dropdown__item-link" routerLink="/account"
+                    >Account
+                  </a>
+                </li>
+                <li class="dropdown__item">
+                  <a class="dropdown__item-link" (click)="onLogout()"
+                    >Sign out of Netflix</a
+                  >
+                </li>
+              </ul>
+            </div>
           </button>
         </div>
       </div>
