--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -71,14 +71,74 @@
   }
 
   &__action-button {
+    position: relative;
+    display: flex;
+    align-items: center;
     font-size: 20px;
     background: transparent;
-    margin-left: 20px;
+    margin-left: 30px;
     cursor: pointer;
+
+    &:hover .dropdown {
+      display: flex;
+    }
+  }
+
+  &__action-avatar {
+    height: 32px;
+  }
+
+  &__action-dropdown {
+    font-size: 16px;
+    margin-left: 10px;
   }
 }
 
 .dropdown {
-  font-size: 16px;
-  margin-left: 10px;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  width: 180px;
+  right: 4%;
+  top: 32px;
+  display: none;
+
+  &__items {
+    width: 100%;
+    background: black;
+    padding: 10px 0;
+    transition: opacity 0.15s ease-out;
+    list-style-type: none;
+    z-index: 2;
+  }
+
+  &__item {
+    width: 100%;
+    height: 100%;
+    font-size: 13px;
+    font-weight: bold;
+    padding-left: 10px;
+    text-align: left;
+  }
+
+  &__item-link {
+    text-decoration: none;
+    color: white;
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+
+  &__arrow {
+    width: 8px;
+    height: 8px;
+    padding-top: 20px;
+    margin-right: 28px;
+    margin-bottom: 1px;
+    border-left: 8px solid transparent;
+    border-right: 8px solid transparent;
+    border-bottom: 8px solid #e5e5e5;
+  }
 }
