Started implementation of watch player

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="header" #header>
   <div class="header__container">
-    <a href="/" class="header__logo-wrapper">
+    <a href="/browse" class="header__logo-wrapper">
       <img src="../../../assets/logo.svg" class="header__logo" />
     </a>
     <div
