Implemented watch player

--- a/src/app/components/watch-player/watch-player-controls/watch-player-controls.component.html
+++ b/src/app/components/watch-player/watch-player-controls/watch-player-controls.component.html
@@ -2,8 +2,14 @@
   <div class="controls__container">
     <div class="controls__left">
       <button class="controls__button" (click)="onPlayPause()">
-        <i class="fas fa-play controls__button-icon" *ngIf="paused"></i>
-        <i class="fas fa-pause controls__button-icon" *ngIf="!paused"></i>
+        <i
+          class="fas fa-play controls__button-icon"
+          *ngIf="!mediaState.playing"
+        ></i>
+        <i
+          class="fas fa-pause controls__button-icon"
+          *ngIf="mediaState.playing"
+        ></i>
       </button>
       <button class="controls__button" (click)="onSeekBack()">
         <i class="fas fa-undo-alt controls__button-icon"></i>
@@ -11,9 +17,15 @@
       <button class="controls__button" (click)="onSeekForward()">
         <i class="fas fa-redo controls__button-icon"></i>
       </button>
-      <button class="controls__button">
-        <i class="fas fa-volume-up controls__button-icon" *ngIf="!muted"></i>
-        <i class="fas fa-volume-mute controls__button-icon" *ngIf="muted"></i>
+      <button class="controls__button" (click)="onMute()">
+        <i
+          class="fas fa-volume-up controls__button-icon"
+          *ngIf="!mediaState.muted"
+        ></i>
+        <i
+          class="fas fa-volume-mute controls__button-icon"
+          *ngIf="mediaState.muted"
+        ></i>
       </button>
     </div>
     <div class="controls__center">
@@ -24,9 +36,15 @@
       <button class="controls__button">
         <i class="far fa-question-circle controls__button-icon"></i>
       </button>
-      <button class="controls__button">
-        <i class="fas fa-expand controls__button-icon" *ngIf="!expanded"></i>
-        <i class="fas fa-compress controls__button-icon" *ngIf="expanded"></i>
+      <button class="controls__button" (click)="onExpandCompress()">
+        <i
+          class="fas fa-expand controls__button-icon"
+          *ngIf="!mediaState.expanded"
+        ></i>
+        <i
+          class="fas fa-compress controls__button-icon"
+          *ngIf="mediaState.expanded"
+        ></i>
       </button>
     </div>
   </div>
