Implemented fullscreen at the watch player and implemented to set the media clicked at the slider to play

--- a/src/app/components/watch-player/watch-player-controls/watch-player-controls.component.html
+++ b/src/app/components/watch-player/watch-player-controls/watch-player-controls.component.html
@@ -29,8 +29,7 @@
       </button>
     </div>
     <div class="controls__center">
-      <span>Freud</span>
-      <span>S1:E1 Hysteria</span>
+      <span class="controls__center-title">{{ mediaState.title }}</span>
     </div>
     <div class="controls__right">
       <button class="controls__button">
