--- a/src/app/components/media-slider/media-slider.component.html
+++ b/src/app/components/media-slider/media-slider.component.html
@@ -32,6 +32,7 @@
         [style.transform]="getTranformStyle(i)"
         (mouseenter)="onHoverItem(i)"
         (mouseleave)="onLeaveItem()"
+        (click)="onPlayMedia(i + 1)"
       >
         <div class="slider__item-content">
           <div class="media-content">
