--- a/src/app/components/watch-player/watch-player.component.html
+++ b/src/app/components/watch-player/watch-player.component.html
@@ -1,5 +1,12 @@
 <div class="watch-player">
-  <video #player [src]="media.media" class="watch-player-video"></video>
+  <video
+    #player
+    class="watch-player-video"
+    (click)="onClickVideo()"
+    (dblclick)="onDoubleClickVideo()"
+  >
+    <source [src]="media.media" type="video/mp4" />
+  </video>
 
   <app-watch-player-controls
     class="watch-player-controls"
