--- a/src/app/components/watch-player/watch-player.component.scss
+++ b/src/app/components/watch-player/watch-player.component.scss
@@ -2,6 +2,14 @@
   width: 100%;
   height: 100%;
   background: black;
+
+  &__footer {
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    transition: opacity 500ms ease;
+  }
 }
 
 .watch-player-video {
@@ -14,4 +22,36 @@
   bottom: 0;
   left: 0;
   width: 100%;
+}
+
+.progress-bar {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  bottom: 95px;
+  left: 0;
+  width: 100%;
+  height: 30px;
+  padding: 13px 20px;
+  transition: padding 300ms ease;
+
+  &:hover {
+    padding: 11px 20px;
+  }
+
+  &__container {
+    width: 100%;
+    height: 100%;
+    background-color: #5b5b5b;
+    cursor: pointer;
+  }
+
+  &__duration {
+    margin: 0 10px 0 15px;
+  }
+
+  &__current {
+    height: 100%;
+    background-color: #e50914;
+  }
 }
