Adjusted watcher player footer hidding

--- a/src/app/components/watch-player/watch-player.component.html
+++ b/src/app/components/watch-player/watch-player.component.html
@@ -1,12 +1,11 @@
 <div class="watch-player">
   <video
     #player
+    [src]="media.media"
     class="watch-player-video"
     (click)="onClickVideo()"
     (dblclick)="onDoubleClickVideo()"
-  >
-    <source [src]="media.media" type="video/mp4" />
-  </video>
+  ></video>
 
   <div #footer class="watch-player__footer">
     <div class="progress-bar">
