--- a/src/app/components/watch-player/watch-player.component.html
+++ b/src/app/components/watch-player/watch-player.component.html
@@ -1,3 +1,9 @@
+<div class="loading-spinner" *ngIf="loading">
+  <img
+    src="../../../assets/spinner-loading.png"
+    class="loading-spinner__icon"
+  />
+</div>
 <div class="watch-player">
   <video
     #player
@@ -7,6 +13,13 @@
     (dblclick)="onDoubleClickVideo()"
   ></video>
 
+  <div #headerIcon class="watch-player__header">
+    <i
+      routerLink="/browse"
+      class="fas fa-arrow-left watch-player__header-icon"
+    ></i>
+    <span class="watch-player__header-tooltip">Back to Browse</span>
+  </div>
   <div #footer class="watch-player__footer">
     <div class="progress-bar">
       <div class="progress-bar__container" (click)="onProgressClick($event)">
