Adjusted player controls

--- a/src/app/components/billboard/billboard.component.html
+++ b/src/app/components/billboard/billboard.component.html
@@ -6,7 +6,7 @@
         <div>{{ media.synopsis }}</div>
       </div>
       <div class="billboard__buttons">
-        <div class="billboard__button" routerLink="/watch/12">
+        <div class="billboard__button" routerLink="/watch/{{ media.id }}">
           <div class="billboard__button-icon">
             <i class="fas fa-play"></i>
           </div>
