--- a/src/app/components/media-slider/media-slider.component.html
+++ b/src/app/components/media-slider/media-slider.component.html
@@ -1,4 +1,3 @@
-<app-media></app-media>
 <div class="media-slider">
   <div class="media-slider__header">
     <span class="media-slider__title">{{ mediaGroup.name }}</span>
@@ -29,58 +28,70 @@
         class="slider__item"
         #sliderItem
         *ngFor="let media of sliderItems; let i = index"
-        [style.transform]="getTranformStyle(i)"
         (mouseenter)="onHoverItem(i)"
         (mouseleave)="onLeaveItem()"
       >
-        <div class="slider__item-content">
-          <div class="media-content">
-            <div class="media-content__container">
-              <div class="media-content__wrapper">
-                <div class="media-content__infos" (click)="onPlayMedia(i + 1)">
-                  <div class="media-content__button media-content__button--big">
-                    <i class="fas fa-play"></i>
-                  </div>
-                  <span class="media-content__title">{{ media.title }}</span>
-                  <div class="media-content__meta">
-                    <div appMaturityStyle class="media-content__maturity">
-                      {{ media.maturity }}
+        <div
+          class="slider__item-container"
+          [style.transform]="getTranformStyle(i)"
+        >
+          <div class="slider__item-content">
+            <div class="media-content">
+              <div class="media-content__container">
+                <div class="media-content__wrapper">
+                  <div
+                    class="media-content__infos"
+                    (click)="onPlayMedia(i + 1)"
+                  >
+                    <div
+                      class="media-content__button media-content__button--big"
+                    >
+                      <i class="fas fa-play"></i>
                     </div>
-                    <div class="media-content__duration">
-                      {{ media.duration }}
+                    <span class="media-content__title">{{ media.title }}</span>
+                    <div class="media-content__meta">
+                      <div appMaturityStyle class="media-content__maturity">
+                        {{ media.maturity }}
+                      </div>
+                      <div class="media-content__duration">
+                        {{ media.duration }}
+                      </div>
+                    </div>
+                    <div class="media-content__tags">
+                      <span
+                        class="media-content__tag"
+                        *ngFor="let tag of media.tags"
+                        >{{ tag }}
+                      </span>
                     </div>
                   </div>
-                  <div class="media-content__tags">
-                    <span
-                      class="media-content__tag"
-                      *ngFor="let tag of media.tags"
-                      >{{ tag }}
-                    </span>
+                  <div class="media-content__buttons">
+                    <div class="media-content__button">
+                      <i class="far fa-thumbs-up"></i>
+                    </div>
+                    <div class="media-content__button">
+                      <i class="far fa-thumbs-down"></i>
+                    </div>
+                    <div class="media-content__button">
+                      <i class="fas fa-check"></i>
+                    </div>
+                    <div class="media-content__button">
+                      <i class="fas fa-plus"></i>
+                    </div>
                   </div>
                 </div>
-                <div class="media-content__buttons">
-                  <div class="media-content__button">
-                    <i class="far fa-thumbs-up"></i>
-                  </div>
-                  <div class="media-content__button">
-                    <i class="far fa-thumbs-down"></i>
-                  </div>
-                  <div class="media-content__button">
-                    <i class="fas fa-check"></i>
-                  </div>
-                  <div class="media-content__button">
-                    <i class="fas fa-plus"></i>
-                  </div>
+                <div class="media-content__details">
+                  <i class="fas fa-chevron-down"></i>
                 </div>
-              </div>
-              <div class="media-content__details">
-                <i class="fas fa-chevron-down"></i>
               </div>
             </div>
           </div>
-        </div>
-        <div class="slider__item-background">
-          <img class="slider__item-background-image" [src]="media.thumbnail" />
+          <div class="slider__item-background">
+            <img
+              class="slider__item-background-image"
+              [src]="media.thumbnail"
+            />
+          </div>
         </div>
       </div>
     </div>
