Adjusted slider details arrow on scroll

--- a/src/app/components/media-slider/media-slider.component.html
+++ b/src/app/components/media-slider/media-slider.component.html
@@ -32,7 +32,7 @@
         [style.transform]="getTranformStyle(i)"
         (mouseenter)="onHoverItem(i)"
         (mouseleave)="onLeaveItem()"
-        (activeMediaChange)="onActiveMedia($event)"
+        (activeMediaChange)="onActiveMediaChange($event)"
         [activeMedia]="activeMedia"
       ></app-media-slider-item>
     </div>
