Implemented to save the media progress on the localstorage and adjusted the project  structure

--- a/src/app/components/media-slider/media-slider.component.html
+++ b/src/app/components/media-slider/media-slider.component.html
@@ -1,6 +1,6 @@
 <div class="media-slider">
   <div class="media-slider__header">
-    <span class="media-slider__title">{{ mediaGroup.name }}</span>
+    <span class="media-slider__title">{{ listTitle }}</span>
     <div class="media-slider__pages-count">
       <ul
         class="pages-count"
