--- a/src/app/components/media-slider/media-slider-item/media-slider-item.component.html
+++ b/src/app/components/media-slider/media-slider-item/media-slider-item.component.html
@@ -23,7 +23,7 @@
         </div>
         <div
           class="media-content__wrapper"
-          [style.visibility]="activeMedia && 'hidden'"
+          [style.visibility]="activeMedia ? 'hidden' : 'visible'"
         >
           <div class="media-content__infos" (click)="onPlayMedia()">
             <div class="media-content__button media-content__button--big">
