--- a/src/app/components/media-slider/media-slider.component.html
+++ b/src/app/components/media-slider/media-slider.component.html
@@ -5,7 +5,7 @@
       <ul
         class="pages-count"
         [ngClass]="{
-          hide: !hoverSlide
+          hide: !hoverSlide || totalPages.length <= 1
         }"
       >
         <li
